@@ -10,6 +10,8 @@ Broker:
 - Fix support for openssl 3.0.
 - Fix check when loading persistence file of a different version than the
   native version. Closes #1684.
+- Fix possible assert crash associated with bridge reconnecting when compiled
+  without epoll support. Closes #1700.
  
 Client library:
 - Don't treat an unexpected PUBACK, PUBREL, or PUBCOMP as a fatal error.
